--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,32 @@ fastapi==0.115.8
 filelock==3.17.0
 fsspec==2024.12.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.28.1
 idna==3.10
 iniconfig==2.0.0
+Jinja2==3.1.5
 joblib==1.4.2
+kagglehub==0.3.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+nltk==3.9.1
 numpy==2.2.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
 pluggy==1.5.0
@@ -26,13 +47,17 @@ requests==2.32.3
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
+setuptools==75.8.0
 six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
+sympy==1.13.1
 threadpoolctl==3.5.0
 tokenizers==0.21.0
+torch==2.6.0
 tqdm==4.67.1
 transformers==4.48.1
+triton==3.2.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
