--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
+attrs==25.1.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+datasets==3.2.0
+dill==0.3.8
 fastapi==0.115.8
 filelock==3.17.0
-fsspec==2024.12.0
+frozenlist==1.5.0
+fsspec==2024.9.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -17,6 +24,8 @@ joblib==1.4.2
 kagglehub==0.3.6
 MarkupSafe==3.0.2
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.2
@@ -36,6 +45,8 @@ nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
 pluggy==1.5.0
+propcache==0.2.1
+pyarrow==19.0.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 pytest==8.3.4
@@ -62,3 +73,5 @@ typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 uvicorn==0.34.0
+xxhash==3.5.0
+yarl==1.18.3
