--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+accelerate==1.3.0
+aiofiles==24.1.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
@@ -7,25 +9,35 @@ attrs==25.1.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
+coverage==7.6.12
 datasets==3.2.0
+dict-toolbox==5.0.0
 dill==0.3.8
 fastapi==0.115.8
 filelock==3.17.0
 frozenlist==1.5.0
 fsspec==2024.9.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 huggingface-hub==0.28.1
 idna==3.10
+imbalanced-learn==0.13.0
+imblearn==0.0
 iniconfig==2.0.0
 Jinja2==3.1.5
 joblib==1.4.2
 kagglehub==0.3.6
+lazy-object-proxy==1.10.0
+loguru==0.7.3
 MarkupSafe==3.0.2
 mpmath==1.3.0
+msgpack==1.1.0
 multidict==6.1.0
 multiprocess==0.70.16
+nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.2
@@ -45,26 +57,38 @@ nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
 pluggy==1.5.0
+pop==27.1.0
+pop-config==12.0.4
+pop-loop==1.1.0
+prometheus-fastapi-instrumentator==7.0.2
+prometheus_client==0.21.1
 propcache==0.2.1
+psutil==7.0.0
 pyarrow==19.0.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 pytest==8.3.4
+pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
+rend==7.0.2
 requests==2.32.3
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
 setuptools==75.8.0
 six==1.17.0
+sklearn-compat==0.1.3
 sniffio==1.3.1
 starlette==0.45.3
 sympy==1.13.1
+textblob==0.19.0
 threadpoolctl==3.5.0
 tokenizers==0.21.0
+toml==0.10.2
 torch==2.6.0
 tqdm==4.67.1
 transformers==4.48.1
