--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,10 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Check & Train Baseline Model if Missing
+        run: |
+          [ -f "src/models/baseline_model/baseline_model.pkl" ] || python src/training/train_baseline_model.py
+  
       - name: Run Tests and Check Coverage
         run: |
           pytest --cov=src tests/ --cov-report=term-missing | tee coverage.txt
