--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,27 +25,11 @@ jobs:
 
       - name: Download Dataset (No Credentials Required)
         run: |
-          mkdir -p src/data/raw
-          if [ ! -f "src/data/raw/imdb_dataset.csv" ]; then
-            echo "⚡ Dataset not found, attempting to download..."
-            python src/data_loader.py || echo "❌ Dataset download failed. Retrying..."
-            sleep 5
-            python src/data_loader.py || echo "❌ Dataset download failed again. Stopping build."
-          fi
-          
-          if [ ! -f "src/data/raw/imdb_dataset.csv" ]; then
-            echo "❌ Dataset download failed after 2 attempts. Stopping build."
-            exit 1
-          fi
+          python src/data_loader.py
 
       - name: Check & Train Baseline Model if Missing
         run: |
-          mkdir -p src/data/processed/imdb_hf
-          if [ ! -f "src/data/raw/imdb_dataset.csv" ]; then
-            echo "❌ Dataset is missing. Cannot train model."
-            exit 1
-          fi
-          [ -f "src/models/baseline_model/baseline_model.pkl" ] || python src/training/train_baseline_model.py
+          python src/training/train_baseline_model.py
 
       - name: Run Tests and Check Coverage
         run: |
