--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,21 +23,17 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Download Dataset (No Credentials Required)
+      - name: Run Full Pipeline (Dataset, Preprocessing, Training)
         run: |
-          python src/data_loader.py
-
-      - name: Check & Train Baseline Model if Missing
-        run: |
-          python src/training/train_baseline_model.py
+          python run_pipeline.py || { echo "Pipeline failed. Stopping build."; exit 1; }
 
       - name: Run Tests and Check Coverage
         run: |
           pytest --cov=src tests/ --cov-report=term-missing | tee coverage.txt
           coverage_percent=$(grep -Po '\bTOTAL.*\b\K\d+(?=%)' coverage.txt)
-          echo "📊 Coverage: $coverage_percent%"
+          echo "Coverage: $coverage_percent%"
           if [ "$coverage_percent" -lt 85 ]; then
-            echo "❌ Test coverage is below 85%, deployment stopped."
+            echo "Test coverage is below 85%, deployment stopped."
             exit 1
           fi
 
