--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,19 @@ jobs:
         run: |
           huggingface-cli login --token "$HF_TOKEN"
 
+      - name: Download Transformer Model from Hugging Face
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          if [ ! -f "src/models/transformer_finetuned/config.json" ]; then
+            echo "Model not found locally. Downloading from Hugging Face..."
+            mkdir -p src/models/transformer_finetuned
+            huggingface-cli login --token $HF_TOKEN
+            huggingface-cli download Mateussousa00/sentiment-analysis-model --local-dir src/models/transformer_finetuned
+          else
+            echo "Model found locally."
+          fi
+
       - name: Run Full Pipeline (Dataset, Preprocessing, Training)
         run: |
           python run_pipeline.py || { echo "Pipeline failed. Stopping build."; exit 1; }
