--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,17 +68,23 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       
       - name: Build and push Docker images
-        run: |
-          IMAGE_NAME="sentiment-analysis-api"
-          BRANCH_NAME=$(echo "${{ github.ref_name }}" | sed 's/\//-/g')  # Make sure branch names are safe for tags
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          IMAGE_NAME: sentiment-analysis-api
+        run: |      
+          # Make branch names safe for Docker tags
+          BRANCH_NAME=$(echo "${{ github.ref_name }}" | sed 's/\//-/g')  
           COMMIT_SHA=$(git rev-parse --short HEAD)
       
-          # Build the image
-          docker build -t $IMAGE_NAME:$BRANCH_NAME -t $IMAGE_NAME:$COMMIT_SHA .
+          # Full Docker image name (namespace/repo:tag)
+          IMAGE_REPO="$DOCKER_USERNAME/$IMAGE_NAME"
+      
+          # Build Docker image with multiple tags
+          docker build -t $IMAGE_REPO:$BRANCH_NAME -t $IMAGE_REPO:$COMMIT_SHA .
       
           # Push both tags
-          docker push $IMAGE_NAME:$BRANCH_NAME
-          docker push $IMAGE_NAME:$COMMIT_SHA
+          docker push $IMAGE_REPO:$BRANCH_NAME
+          docker push $IMAGE_REPO:$COMMIT_SHA
 
   deploy_vercel:
     runs-on: ubuntu-latest
@@ -87,7 +93,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Install Vercel CLI
+        run: npm install -g vercel
+
       - name: Deploy to Vercel
         run: |
-          npm install -g vercel
-          vercel --token ${{ secrets.VERCEL_TOKEN }} --prod
+          vercel --token ${{ secrets.VERCEL_TOKEN }} --org-id ${{ secrets.VERCEL_ORG_ID }} --project-id ${{ secrets.VERCEL_PROJECT_ID }} --yes
+      
