feat: finished sentiment-analysis-api v1

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ ENVIRONMENT=development
 HOST=0.0.0.0
 PORT=8000
 LOG_LEVEL=debug
+MODEL_PATH=src/models/transformer_finetuned
+HUGGINGFACE_MODEL=
+BASELINE_MODEL_PATH=src/models/baseline_model/baseline_model.pkl
+VECTORIZER_PATH=src/models/baseline_model/tfidf_vectorizer.pkl
