--- a/.env.production.example
+++ b/.env.production.example
@@ -2,3 +2,7 @@ ENVIRONMENT=production
 HOST=0.0.0.0
 PORT=8000
 LOG_LEVEL=info
+MODEL_PATH=src/models/transformer_finetuned
+HUGGINGFACE_MODEL=
+BASELINE_MODEL_PATH=src/models/baseline_model/baseline_model.pkl
+VECTORIZER_PATH=src/models/baseline_model/tfidf_vectorizer.pkl
