--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,13 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "src/api/main.py"
     }
-  ]
+  ],
+  "functions": {
+    "api/main.py": {
+      "runtime": "python"
+    }
+  }
 }
