--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,7 +75,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Docker Image
-        run: docker build -t myuser/sentiment-analysis-api:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest .
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -93,42 +93,43 @@ jobs:
           IMAGE_REPO="$DOCKER_USERNAME/$IMAGE_NAME"
       
           # Build Docker image with multiple tags
-          docker build -t $IMAGE_REPO:$BRANCH_NAME -t $IMAGE_REPO:$COMMIT_SHA .
+          docker build -t $IMAGE_REPO:$BRANCH_NAME -t $IMAGE_REPO:$BRANCH_NAME-$COMMIT_SHA .
       
           # Push both tags
           docker push $IMAGE_REPO:$BRANCH_NAME
-          docker push $IMAGE_REPO:$COMMIT_SHA
+          docker push $IMAGE_REPO:$BRANCH_NAME-$COMMIT_SHA
 
-  deploy_vercel:
+      - name: Log in to Hugging Face
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: hugginface-cli login --token "$HF_TOKEN"
+
+      - name: Deploy Docker Image to Hugging Face Spaces
+        env:
+          HF_USERNAME: ${{ secrets.HUGGINGFACE_USERNAME }}  
+          HF_REPO: ${{ secrets.HF_REPO }}                
+        run: |
+          # Ensure the Hugging Face repo exists
+          huggingface-cli repo create spaces/$HF_USERNAME/$HF_REPO --type=space --token "$HF_TOKEN" || echo "Repo already exists"
+          
+          # Tag the Docker image for Hugging Face
+          HF_IMAGE="docker.io/spaces/$HF_USERNAME/$HF_REPO"
+          docker tag $IMAGE_REPO:latest $HF_IMAGE:latest
+          
+          # Push the image to Hugging Face
+          docker push $HF_IMAGE:latest
+
+  deploy_huggingface:
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: build_docker
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Install Vercel CLI
-        run: npm install -g vercel
-
-      - name: Download Transformer Model from Hugging Face
-        env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
-          MODEL_PATH: "src/models/transformer_finetuned"
-          HUGGINGFACE_MODEL: ${{ secrets.HUGGINGFACE_MODEL }}
+      - name: Log in to Hugging Face
         run: |
-          rm -rf src/models/transformer_finetuned
-          echo "Model not found locally. Downloading from Hugging Face..."
-          mkdir -p $MODEL_PATH
-          huggingface-cli login --token $HF_TOKEN
-          huggingface-cli download $HUGGINGFACE_MODEL --local-dir $MODEL_PATH
-          ls -lh $MODEL_PATH
+          huggingface-cli login --token "${{ secrets.HF_TOKEN }}"
 
-      - name: Run Full Pipeline (Dataset, Preprocessing, Training)
+      - name: Update Hugging Face Space
         run: |
-          python run_pipeline.py || { echo "Pipeline failed. Stopping build."; exit 1; }
-
-      - name: Deploy to Vercel
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          HUGGINGFACE_MODEL: ${{ secrets.HUGGINGFACE_MODEL }}
-        run: |
-          vercel --token $VERCEL_TOKEN --yes --prod
+          huggingface-cli repo update --repo-type=space ${{ secrets.HUGGINGFACE_API }} --token "${{ secrets.HF_TOKEN }}"
