--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,9 +100,8 @@ jobs:
           docker push $IMAGE_REPO:$BRANCH_NAME-$COMMIT_SHA
 
       - name: Log in to Hugging Face
-        env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: hugginface-cli login --token "$HF_TOKEN"
+        run: |
+          huggingface-cli login --token "${{ secrets.HF_TOKEN }}"
 
       - name: Deploy Docker Image to Hugging Face Spaces
         env:
