--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,10 +98,15 @@ jobs:
           # Push both tags
           docker push $IMAGE_REPO:$BRANCH_NAME
           docker push $IMAGE_REPO:$BRANCH_NAME-$COMMIT_SHA
+      
+      - name: Install Hugging Face CLI
+        run: pip install huggingface_hub
 
-      - name: Log in to Hugging Face
+      - name: Authenticate with Hugging Face
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          huggingface-cli login --token "${{ secrets.HF_TOKEN }}"
+          huggingface-cli login --token "$HF_TOKEN"
 
       - name: Deploy Docker Image to Hugging Face Spaces
         env:
@@ -124,6 +129,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
+      - name: Install Hugging Face CLI
+        run: pip install huggingface_hub
 
       - name: Log in to Hugging Face
         run: |
