--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -116,13 +116,16 @@ jobs:
         run: |
           # Authenticate with Hugging Face
           echo "$HF_TOKEN" | huggingface-cli login --token "$HF_TOKEN"
-          
-          # Define the Hugging Face container repo
-          HF_IMAGE="docker.io/spaces/$HUGGINGFACE_USERNAME/$HF_REPO"
-      
+              
+          # Define the correct Hugging Face container repo (NO "spaces/" in the name)
+          HF_IMAGE="ghcr.io/$HF_USERNAME/$HF_REPO"
+              
+          # Ensure lowercase repo name
+          HF_IMAGE=$(echo $HF_IMAGE | tr '[:upper:]' '[:lower:]')
+              
           # Tag the Docker image properly
           docker tag ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest $HF_IMAGE:latest
-          
+              
           # Push the image to Hugging Face
           docker push $HF_IMAGE:latest
 
