--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -116,16 +116,16 @@ jobs:
         run: |
           # Authenticate with Hugging Face
           echo "$HF_TOKEN" | huggingface-cli login --token "$HF_TOKEN"
-              
+
           # Define the correct Hugging Face container repo (NO "spaces/" in the name)
-          HF_IMAGE="ghcr.io/$HF_USERNAME/$HF_REPO"
-              
+          HF_IMAGE="ghcr.io/$HUGGINGFACE_USERNAME/$HF_REPO"
+
           # Ensure lowercase repo name
           HF_IMAGE=$(echo $HF_IMAGE | tr '[:upper:]' '[:lower:]')
-              
+
           # Tag the Docker image properly
           docker tag ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest $HF_IMAGE:latest
-              
+
           # Push the image to Hugging Face
           docker push $HF_IMAGE:latest
 
