--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -122,7 +122,7 @@ jobs:
           cd $HF_SPACE
   
           # Copy all files from the GitHub repo
-          rsync -av --exclude='.git' ../sentiment-analysis/ .  
+          rsync -av --exclude='.git' $GITHUB_WORKSPACE/ . 
   
           git add .
           git commit -m "Auto-deploy from GitHub Actions" || echo "No changes to commit"
