--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,16 +117,14 @@ jobs:
           git config --global user.email ${{ secrets.G_EMAIL }}
           git config --global user.name ${{ secrets.G_NAME }}
   
-          # Clone the repo and update it
-          git clone https://huggingface.co/spaces/$HUGGINGFACE_USERNAME/$HF_SPACE
+          git clone https://user:$HF_TOKEN@huggingface.co/spaces/$HUGGINGFACE_USERNAME/$HF_SPACE
           cd $HF_SPACE
   
-          # Copy all files from the GitHub repo
           rsync -av --exclude='.git' $GITHUB_WORKSPACE/ . 
   
           git add .
           git commit -m "Auto-deploy from GitHub Actions" || echo "No changes to commit"
-          git push
+          git push https://user:$HF_TOKEN@huggingface.co/spaces/$HUGGINGFACE_USERNAME/$HF_SPACE HEAD:main
   
       - name: Restart Hugging Face Space
         env:
