--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -124,7 +124,12 @@ jobs:
   
           git add .
           git commit -m "Auto-deploy from GitHub Actions" || echo "No changes to commit"
-          git push https://user:$HF_TOKEN@huggingface.co/spaces/$HUGGINGFACE_USERNAME/$HF_SPACE HEAD:main
+          
+          GIT_ASKPASS="$(mktemp)"
+          echo "echo \$HF_TOKEN" > $GIT_ASKPASS
+          chmod +x $GIT_ASKPASS
+          GIT_ASKPASS=$GIT_ASKPASS git push https://huggingface.co/spaces/$HUGGINGFACE_USERNAME/$HF_SPACE HEAD:main
+
   
       - name: Restart Hugging Face Space
         env:
