fix: updated hugging face deploy

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ MODEL_PATH=src/models/transformer_finetuned
 HUGGINGFACE_MODEL=
 BASELINE_MODEL_PATH=src/models/baseline_model/baseline_model.pkl
 VECTORIZER_PATH=src/models/baseline_model/tfidf_vectorizer.pkl
+HF_TOKEN=
