--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,6 +74,19 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Install Hugging Face CLI
+        run: pip install huggingface_hub
+  
+      - name: Authenticate with Hugging Face
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: huggingface-cli login --token "$HF_TOKEN"
+  
+      - name: Upload Model to Hugging Face Model Hub
+        run: |
+          huggingface-cli upload ${{ secrets.HUGGINGFACE_MODEL }} src/models/baseline_model.pkl --token $HF_TOKEN
+  
+
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest .
 
