--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,8 +84,7 @@ jobs:
   
       - name: Upload Model to Hugging Face Model Hub
         run: |
-          huggingface-cli upload ${{ secrets.HUGGINGFACE_MODEL }} src/models/baseline_model.pkl --token $HF_TOKEN
-  
+          huggingface-cli upload ${{ secrets.HUGGINGFACE_MODEL }} src/models/baseline_model.pkl --repo-type model --token $HF_TOKEN
 
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest .
