--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,9 +83,12 @@ jobs:
         run: huggingface-cli login --token "$HF_TOKEN"
   
       - name: Upload Model to Hugging Face Model Hub
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_MODEL: ${{ secrets.HUGGINGFACE_MODEL }}
         run: |
-          huggingface-cli upload ${{ secrets.HUGGINGFACE_MODEL }} src/models/baseline_model.pkl --repo-type model --token $HF_TOKEN
-
+          huggingface-cli upload $HF_MODEL src/models/baseline_model.pkl --repo-type model --token="$HF_TOKEN"
+      
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest .
 
