--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,6 +114,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Set Hugging Face Cache Directory
+        run: |
+          echo "TRANSFORMERS_CACHE=/tmp/huggingface_cache" >> $GITHUB_ENV
+
       - name: Set Environment Variables
         run: |
           echo "ENVIRONMENT=${{ secrets.ENVIRONMENT }}" >> $GITHUB_ENV
