--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,9 +118,14 @@ jobs:
         run: |
           curl -fsSL https://railway.app/install.sh | sh
 
-      - name: Deploy to Railway
+      - name: Log in to Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        run: |
+          railway login --token $RAILWAY_TOKEN
+
+      - name: Deploy Docker Image to Railway
+        env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         run: |
-          railway up --service sentiment-analysis-api --image $DOCKER_USERNAME/sentiment-analysis-api:latest
+          railway service redeploy --service sentiment-analysis-api --image $DOCKER_USERNAME/sentiment-analysis-api:latest
