--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,19 +113,10 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+    
+      - name: Authenticate with Railway
+        run: railway auth --token ${{ secrets.RAILWAY_SERVICE_TOKEN }}
+    
+      - name: Deploy to Railway
+        run: railway up --service sentiment-analysis-api --project ${{ secrets.RAILWAY_PROJECT_ID }}
 
-      - name: Install Railway CLI
-        run: |
-          curl -fsSL https://railway.app/install.sh | sh
-
-      - name: Log in to Railway
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        run: |
-          railway login --token $RAILWAY_TOKEN
-
-      - name: Deploy Docker Image to Railway
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        run: |
-          railway service redeploy --service sentiment-analysis-api --image $DOCKER_USERNAME/sentiment-analysis-api:latest
