fix: login railway

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,7 +118,7 @@ jobs:
         run: curl -fsSL https://railway.app/install.sh | sh
 
       - name: Authenticate with Railway
-        run: railway auth --token ${{ secrets.RAILWAY_SERVICE_TOKEN }}
+        run: railway login --token ${{ secrets.RAILWAY_SERVICE_TOKEN }}
 
       - name: Deploy to Railway
         run: railway up --service sentiment-analysis-api --project ${{ secrets.RAILWAY_PROJECT_ID }}
